# Seneca-college-OOP345-Workshops-and-Labs

./: README.md  notes.txt
Final_Project/: readme.md
Final_Project/MS1/: CMakeLists.txt  Station.cpp  Station.h  Utilities.cpp  Utilities.h  ms1_output.txt
Final_Project/MS2/: ms2.cpp  ms2_output.txt
Final_Project/MS3/: ms3_output.txt
Week_01/WS01/: CMakeLists.txt  FoodOrder.cpp  FoodOrder.h  readme.md  reflect.txt  sample_output.txt  w1_p1.cpp  w1_p2.cpp  ws
Week_01/WS01/Part_1/: CMakeLists.txt  FoodOrder.cpp  FoodOrder.h  w1_p1.cpp
Week_02/WS02/: readme.md
Week_02/WS02/part 1/: CMakeLists.txt  ProteinDatabase.cpp  ProteinDatabase.h  TimedTask.cpp  TimedTask.h  random.txt  w2_p1.cpp  ws
Week_02/WS02/part 2/: CMakeLists.txt  ProteinDatabase.cpp  ProteinDatabase.h  TimedTask.cpp  TimedTask.h  reflect.txt  sample_output.txt  w2_p2.cpp
Week_03/WS03/: readme.md
Week_03/WS03/part 1/: CMakeLists.txt  Collection.cpp  Collection.h  Pair.cpp  Pair.h  Set.cpp  Set.h  w3_p1.cpp
Week_03/WS03/part 2/: CMakeLists 8.28.16 PM.txt  CMakeLists.txt  Collection.h  Pair.cpp  Pair.h  Set.h  reflect.txt  w3_p2.cpp
Week_04/WS04/: readme.md
Week_04/WS04/part 1/: CMakeLists.txt  Toy.cpp  Toy.h  sample_output.txt  w4_p1.cpp
Week_04/WS04/part 2/: CMakeLists.txt  Child.cpp  Child.h  ConfirmOrder.cpp  Toy.cpp  (+4 more)
Week_05/WS05/: readme.md
Week_06/WS06/: readme.md
Week_06/WS06/part 2/: CMakeLists.txt  College.cpp  College.h  Employee.cpp  Employee.h  Professor.cpp  Professor.h  Student.cpp  Student.h  Utilities.cpp  Utilities.h  college.txt  sample_output.txt  w6_p2.cpp
(+28 files in other folders)
